--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ variables:
 
 include: 
   - local: 'ci-includes/dt_create_deployment_event.yaml'
-  - local: 'ci-includes/dt_create_synthetic_check.yaml'
+  # - local: 'ci-includes/dt_create_synthetic_check.yaml'
   - local: 'ci-includes/dt_get_problems.yaml'
   - local: 'ci-includes/dt_get_performance.yaml'
   - local: 'ci-includes/keptn_evaluation.yaml'
@@ -112,15 +112,15 @@ dt_create_alerting:
   only:
     - tags
 
-dt_create_synthetic_check:
-  variables:
-    TYPE: PRIVATE
-    LOCATIONS: 1
-    FREQUENCY: 1
-  environment:
-    name: test
-  only:
-    - tags  
+#dt_create_synthetic_check:
+#  variables:
+#    TYPE: PRIVATE
+#    LOCATIONS: 1
+#    FREQUENCY: 1
+#  environment:
+#    name: test
+#  only:
+#    - tags  
 
 create-keptn-qualitygate:
   environment:
