--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ include:
   - local: 'ci-includes/dt_create_deployment_event.yaml'
   # - local: 'ci-includes/dt_create_synthetic_check.yaml'
   - local: 'ci-includes/dt_get_problems.yaml'
-  - local: 'ci-includes/dt_get_performance.yaml'
+  #- local: 'ci-includes/dt_get_performance.yaml'
   - local: 'ci-includes/keptn_evaluation.yaml'
   - local: 'ci-includes/dt_jmeter_loadtest.yaml'
   - local: 'ci-includes/dt_create_keptn_qualitygate.yaml'
@@ -47,6 +47,7 @@ docker-build-master:
 deploy-application:
   image: registry.gitlab.com/checkelmann/cicd-tools:latest
   stage: deploy
+  needs: ["create-keptn-qualitygate"]
   environment:
     name: test
   variables:
@@ -67,13 +68,12 @@ deploy-application:
         "type": "sh.keptn.events.deployment-finished",
         "contenttype": "application/json",
         "specversion": "0.2",
-        "source": "test-event",
+        "source": "'${CI_PROJECT_PATH_SLUG}'",
         "id": "'${UUID}'",
         "data": {
           "project": "'${APPLICATION_SHORT_NAME}'",
           "stage": "'${CI_ENVIRONMENT_SLUG}'",
           "service": "'${APPLICATION_SHORT_NAME}'",
-          "testStrategy": "performance",
           "deploymentStrategy": "direct",
           "tag": "'${CI_COMMIT_TAG}'",
           "image": "'${CI_REGISTRY_IMAGE}'",
@@ -101,6 +101,7 @@ deploy-application:
     - tags  
 
 dt_create_deployment_event:
+  needs: ["deploy-application"]
   environment:
     name: test
   only:
@@ -138,7 +139,7 @@ keptn_evaluation:
   environment:
     name: test
   when: manual  
-  start_in: 10 minutes  
+  start_in: 5 minutes  
   when: delayed    
   only:
     - tags    
@@ -146,14 +147,14 @@ keptn_evaluation:
 dt_get_problems:
   environment:
     name: test
-  start_in: 10 minutes  
+  start_in: 5 minutes  
   when: delayed    
   only:
     - tags  
 
-dt_performance:
-  only:
-    - tags
+#dt_performance:
+#  only:
+#    - tags
   #needs: ["dt_create_deployment_event"]
 
 deploy-to-prod:
