--- a/ci-includes/dt_create_alerting.yaml
+++ b/ci-includes/dt_create_alerting.yaml
@@ -9,7 +9,7 @@ dt_create_alerting:
 
     AP_ID=$(curl -s -X GET "${API}/alertingProfiles" \
         -H "Authorization: Api-Token ${DT_API_TOKEN}" | \
-        jq -r ".values[] | select(.name == \"${APPLICATION_SHORT_NAME}-GITLAB\") | .id")
+        jq -r ".values[] | select(.name == \"${PROJECT_NAME}-GITLAB\") | .id")
 
     if [ "$AP_ID" = "" ]; then
         echo "Create a new Notification Profile and Integration."
@@ -35,7 +35,7 @@ dt_create_alerting:
         # Get notification ID
         NF_ID=$(curl -s -X GET "${API}/notifications" \
             -H "Authorization: Api-Token ${DT_API_TOKEN}" | \
-            jq -r ".values[] | select(.name == \"${APPLICATION_SHORT_NAME}-GITLAB\") | .id")
+            jq -r ".values[] | select(.name == \"${PROJECT_NAME}-GITLAB\") | .id")
 
         envsubst < assets/alerting_profile.json > alerting_profile_tmp.json
 
