--- a/ci-includes/dt_get_performance.yaml
+++ b/ci-includes/dt_get_performance.yaml
@@ -7,7 +7,7 @@ dt_performance:
   start_in: 10 minutes  
   when: delayed
   script: |
-    entityId=$(curl -s -X GET "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/entity/services?tag=keptn_stage:${CI_ENVIRONMENT_SLUG}&tag=keptn_service:${APPLICATION_SHORT_NAME}&relativeTime=5mins" -H "Authorization: Api-Token ${DT_API_TOKEN}" | jq -r .[].entityId)
+    entityId=$(curl -s -X GET "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/entity/services?tag=keptn_stage:${CI_ENVIRONMENT_SLUG}&tag=keptn_service:${SERVICE_NAME}&relativeTime=5mins" -H "Authorization: Api-Token ${DT_API_TOKEN}" | jq -r .[].entityId)
     timeTo=$(curl -s -H "Authorization: Api-Token ${DT_API_TOKEN}"  "https://${DT_TENANT_ID}.live.dynatrace.com/api/v1/events?eventType=CUSTOM_DEPLOYMENT&entityId=${entityId}" | jq .events[0].startTime)
     timeFrom=$((timeTo - 10 * 60 * 1000))
     echo Last Deployment at $(date -d @$(echo "(${timeTo} + 500) / 1000" | bc)), getting timeseries from $(date -d @$(echo "(${timeFrom} + 500) / 1000" | bc))
@@ -21,7 +21,7 @@ dt_performance:
           -H "Authorization: Api-Token ${DT_API_TOKEN}" | jq .dataResult.dataPoints.\"$entityId\" > before.json
 
     pct=$(python /compare.py)
-    python /sendslack.py "Performance Report for ${APPLICATION_SHORT_NAME}" --attachment $(pwd)/report.png
+    python /sendslack.py "Performance Report for ${PROJECT_NAME}.${SERVICE_NAME}" --attachment $(pwd)/report.png
 
     if [ $pct -ge ${THRESHOLD} ]; then
         echo "Performance too slow, measured difference of ${pct}%!"
